k8s/menu-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu-service
  template:
    metadata:
      labels:
        app: menu-service
    spec:
      containers:
        - name: menu-service
          image: murakan001/menu-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: menu-service
spec:
  selector:
    app: menu-service
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
