k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: murakan001/order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004

          volumeMounts:
            - name: order-data
              mountPath: /app/data

      volumes:
        - name: order-data
          persistentVolumeClaim:
            claimName: order-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP
