k8s/restaurant-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
        - name: restaurant-service
          image: murakan001/restaurant-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  selector:
    app: restaurant-service
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
