k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-management-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /restaurant(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: restaurant-service
                port:
                  number: 8001

          - path: /menu(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: menu-service
                port:
                  number: 8002

          - path: /customer(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: customer-service
                port:
                  number: 8003

          - path: /order(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 8004
